# stewart-light

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: CLINICAL_SCOPE.md  DECISIONS.md  DEPLOYMENT.md  PRIVACY.md  PUBLIC_COPY.md  REFERENCES.md  VALIDATION.md
scripts/: stage_web_python.py
src/stewartlight/: calculator.py  enhancements.py  interpret.py  models.py
tests/: test_calculation_engine.py  test_contract.py  test_repo_guardrails.py  test_smoke.py
tests/e2e/: conftest.py  test_web_smoke.py
web/: app.js  index.html  pyodide_worker.js  styles.css
web/assets/py/stewartlight/: __init__.py  enhancements.py  models.py  units.py
web/js/: examples.js  input.js  result-rendering.js  ui-utils.js  visuals.js  worker-client.js
